--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,68 @@
-# Compiled class file
+### Maven
+target/
+logs/
+!.mvn/wrapper/maven-wrapper.jar
+
+### Gradle
+.gradle
+/build/
+/out/
+!gradle/wrapper/gradle-wrapper.jar
+bin/
+
+### Node
+node_modules/
+
+### STS
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA
+.idea
+*.iws
+*.iml
+*.ipr
+log/
+
+### NetBeans
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+### Mac
+.DS_Store
+*/.DS_Store
+
+### VSCode
+*.project
+*.factorypath
+.vscode
+!.vscode/extensions.json
+
+### Compiled class file
 *.class
 
-# Log file
+### Log file
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# BlueJ files
+### BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
+### Package Files
 *.war
 *.nar
 *.ear
@@ -19,6 +70,11 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+### Local file
+application-local.yml
+application-local.yaml
+application-local.properties
+
+/ui/build/
+/workplace/
+/src/main/resources/console/
