--- a/ui/package.json
+++ b/ui/package.json
@@ -1,15 +1,20 @@
 {
+  "private": true,
   "type": "module",
   "scripts": {
-    "build": "run-p type-check \"build-only {@}\" --",
-    "build-only": "rsbuild build",
-    "dev": "rsbuild build --watch --env-mode=development",
+    "dev": "pnpm run \"/^watch:.*/\"",
+    "watch:rsbuild": "rsbuild build --watch --env-mode=development",
+    "build": "run-p build:type-check \"build:build-only {@}\" --",
+    "build:type-check": "vue-tsc --build",
+    "build:build-only": "rsbuild build",
+    "lint": "run-s lint:*",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
-    "lint": "run-s lint:*",
-    "prettier": "prettier --write src/",
+    "format": "pnpm run \"/^format:.*/\"",
+    "format:prettier": "prettier --write src/",
+    "test": "pnpm run \"/^test:.*/\"",
     "test:unit": "vitest --passWithNoTests",
-    "type-check": "vue-tsc --build"
+    "prepare": "cd .. && husky ui/.husky"
   },
   "prettier": {
     "printWidth": 100,
@@ -23,6 +28,7 @@
     "@halo-dev/console-shared": "^2.21.0",
     "axios": "^1.7.2",
     "canvas-confetti": "^1.9.3",
+    "husky": "^9.1.7",
     "vue": "^3.5.17"
   },
   "devDependencies": {
@@ -50,7 +56,8 @@
     "typescript": "~5.9.2",
     "unplugin-icons": "^22.1.0",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.0.7"
+    "vue-tsc": "^3.0.7",
+    "husky": "^8.0.0"
   },
   "packageManager": "pnpm@9.15.9"
 }
