refactor: word count API and update documentation and remove test

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,5 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
-rootProject.name = 'plugin-halo-plugin-extra-api'
+rootProject.name = 'extra-api'
 include 'ui'
