--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -35,6 +35,8 @@ jobs:
           node-version: 24
           cache: 'pnpm'
           cache-dependency-path: 'ui/pnpm-lock.yaml'
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Install Frontend Dependencies
         run: |
           ./gradlew pnpmInstall
