--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,6 @@ pluginManagement {
 }
 rootProject.name = 'extra-api'
 include 'ui'
+include 'shiki'
+
+project(':shiki').projectDir = new File(settingsDir, 'src-js-bundle/shiki')
