--- a/src-js-bundle/shiki/build.gradle
+++ b/src-js-bundle/shiki/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id "com.github.node-gradle.node" version "7.1.0"
 }
 
-group 'top.howiehz.halopluginextraapi.shiki'
+group 'top.howiehz.halo.plugin.extra.api.js.bundle.shiki'
 
 node {
     // 使用项目根目录的 pnpm
