--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id "com.github.node-gradle.node" version "7.1.0"
 }
 
-group 'top.howiehz.halopluginextraapi.ui'
+group 'top.howiehz.halo.plugin.extra.api.ui'
 
 tasks.register('pnpmBuild', PnpmTask) {
     group = 'build'
