--- a/src-js-bundle/shiki/build.gradle
+++ b/src-js-bundle/shiki/build.gradle
@@ -6,8 +6,7 @@ plugins {
 group 'top.howiehz.halo.plugin.extra.api.js.bundle.shiki'
 
 node {
-    // 使用项目根目录的 pnpm
-    pnpmWorkDir = project.layout.projectDirectory
+    // Node configuration
 }
 
 tasks.register('pnpmBuild', PnpmTask) {
