--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -48,7 +48,7 @@ jobs:
           if [ -n "$version" ]; then
             sed -i "s/version=.*-SNAPSHOT$/version=$version/1" gradle.properties
           fi
-          ./gradlew clean jarAll jarLinux-arm64 jarLinux-x86_64 jarMacos-arm64 jarMacos-x86_64 jarWindows-x86_64
+          ./gradlew clean jarAll jarLinux-arm64 jarLinux-x86_64 jarMacos-arm64 jarMacos-x86_64 jarWindows-x86_64 jarLite
       - name: Archive extra-api jar
         uses: actions/upload-artifact@v4
         with:
