--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -48,13 +48,55 @@ jobs:
           if [ -n "$version" ]; then
             sed -i "s/version=.*-SNAPSHOT$/version=$version/1" gradle.properties
           fi
-          ./gradlew clean jarAll jarLinux-arm64 jarLinux-x86_64 jarMacos-arm64 jarMacos-x86_64 jarWindows-x86_64 jarLite
+          ./gradlew clean jarLite jarAll jarLinux-arm64 jarLinux-x86_64 jarMacos-arm64 jarMacos-x86_64 jarWindows-x86_64
       - name: Archive extra-api jar
         uses: actions/upload-artifact@v4
         with:
           name: extra-api
           path: |
             build/libs/*.jar
+          retention-days: 1
+      - name: Upload extra-api-all
+        uses: actions/upload-artifact@v4
+        with:
+          name: extra-api-all
+          path: build/libs/extra-api-all-*.jar
+          retention-days: 1
+      - name: Upload extra-api-linux-arm64
+        uses: actions/upload-artifact@v4
+        with:
+          name: extra-api-linux-arm64
+          path: build/libs/extra-api-linux-arm64-*.jar
+          retention-days: 1
+      - name: Upload extra-api-linux-x86_64
+        uses: actions/upload-artifact@v4
+        with:
+          name: extra-api-linux-x86_64
+          path: build/libs/extra-api-linux-x86_64-*.jar
+          retention-days: 1
+      - name: Upload extra-api-macos-arm64
+        uses: actions/upload-artifact@v4
+        with:
+          name: extra-api-macos-arm64
+          path: build/libs/extra-api-macos-arm64-*.jar
+          retention-days: 1
+      - name: Upload extra-api-macos-x86_64
+        uses: actions/upload-artifact@v4
+        with:
+          name: extra-api-macos-x86_64
+          path: build/libs/extra-api-macos-x86_64-*.jar
+          retention-days: 1
+      - name: Upload extra-api-windows-x86_64
+        uses: actions/upload-artifact@v4
+        with:
+          name: extra-api-windows-x86_64
+          path: build/libs/extra-api-windows-x86_64-*.jar
+          retention-days: 1
+      - name: Upload extra-api-lite
+        uses: actions/upload-artifact@v4
+        with:
+          name: extra-api-lite
+          path: build/libs/extra-api-lite-*.jar
           retention-days: 1
 
   github-release:
